--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
             </div>
             <div class="picture animateme" data-when="enter" data-from="0.7" data-to="0" data-opacity="0" data-rotatey="90" data-easing="easeinout">
-              <img alt="Pine and Birch website samples" src="img/pinebirch.png" /></div>
+              <a target="_blank" href="http://pinebirch.shaescotten.com" ><img alt="Pine and Birch website samples" src="img/pinebirch.png" /></a></div>
           </div>
 
           <hr/>
@@ -102,7 +102,7 @@
                 <a target="_blank" href="http://gastown.shaescotten.com" class="hollowbtn">Go To Website</a>
               </div>
             </div>
-            <div class="picture animateme" data-when="enter" data-from="0.7" data-to="0" data-opacity="0" data-rotatey="-90" data-easing="easeinout"><img alt="Gastown website samples" src="img/gastown.png" /></div>
+            <div class="picture animateme" data-when="enter" data-from="0.7" data-to="0" data-opacity="0" data-rotatey="-90" data-easing="easeinout"><a target="_blank" href="http://gastown.shaescotten.com" ><img alt="Gastown website samples" src="img/gastown.png" /></a></div>
           </div>
 
 
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="picture animateme" data-when="enter" data-from="0.7" data-to="0" data-opacity="0" data-rotatey="90" data-easing="easeinout">
-              <img alt="ESK design website samples" src="img/ESK.png" /></div>
+              <a target="_blank" href="http://esk.shaescotten.com" ><img alt="ESK design website samples" src="img/ESK.png" /></a></div>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@
 
       <div class="colorwrap scrollme">
         <div class="skilldesc animateme" data-when="enter" data-from="0.7" data-to="0" data-opacity="0">
-          <p>The following list of <span>skills</span> are the ones that best demonstrate my competence and abilities to date. I also have <span>additional</span> skills not listed, such as <span>AngularJS</span> and <span>Gulp</span>. I am constantly driven, and enjoy learning new skills that broaden my <span>toolkit</span> and allow me to <span>solve</span> different problems as new situations present themselves.</p>
+          <p>The following list of skills are the ones that best demonstrate my competence and abilities to date. I also have additional skills not listed, such as AngularJS and Gulp. I am constantly driven, and enjoy learning new skills that broaden my toolkit and allow me to solve different problems as new situations present themselves.</p>
         </div>
         <div class="skillchart">
           <div class="htmlchart flexchart">
@@ -194,13 +194,13 @@
           <div class="aboutinfo animateme" data-when="enter" data-from="0.8" data-to="0" data-opacity="0" data-translatey="650" data-easing="easeinout">
             <div class="profinfo">
               <h3>Professional</h3>
-              <p>My name is <span>Shae Scotten</span> and I am a student of the <span>Digital Design and Development</span> program at BCIT, graduating this June. The program is a mix of graphic design, <span>web development</span>, marketing and business, but, over time my interests and strengths took me to favor working as a <span>front-end developer</span>. I took courses with <span>Team Treehouse</span> on my weekends and breaks, furthering my abilities as a <span>developer</span> beyond the scope of the program.
+              <p>My name is Shae Scotten and I am a student of the Digital Design and Development program at BCIT, graduating this June. The program is a mix of graphic design, web development, marketing and business, but, over time my interests and strengths took me to favor working as a front-end developer. I took courses with Team Treehouse on my weekends and breaks, furthering my abilities as a developer beyond the scope of the program.
                 <br/>
-                <br/> I also had the privilege of being the <span>set representative</span> for my program, allowing me to act as the middle man between the students and the program head and dean, <span>solving student problems</span> and relaying crucial information. </p>
+                <br/> I also had the privilege of being the set representative for my program, allowing me to act as the middle man between the students and the program head and dean, solving student problems and relaying crucial information. </p>
             </div>
             <div class="persinfo">
               <h3>Personal</h3>
-              <p>When I'm not working on websites I keep active at the <span>gym</span>, adventuring through the core of downtown <span>Vancouver</span>, or getting together with friends to play various <span>sports</span>. I spend much of my time writing <span>music</span>, learning new <span>songs</span>, and recording new <span>tracks</span> with some fellow musicians. If you don't find me doing any of these things I'll be playing <span>video games</span>, or keeping up with my favorite shows on <span>Netflix</span>.</p>
+              <p>When I'm not working on websites I keep active at the gym, adventuring through the core of downtown Vancouver, or getting together with friends to play various sports. I spend much of my time writing music, learning new songs, and recording new tracks with some fellow musicians. If you don't find me doing any of these things I'll be playing video games, or keeping up with my favorite shows on Netflix.</p>
             </div>
           </div>
         </div>
